--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.2.0",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
